fix grid visuals spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .grid-visuals {
@@ -27,9 +27,9 @@ body {
   align-items: center;
   justify-content: space-around;
   width: 10vw;
-  height: 40vh;
+  height: 50vh;
   padding: 0 1vw;
-  margin: 0;
+  margin: 5vh 0;
 }
 
 .grid-visuals button {
@@ -86,10 +86,6 @@ body {
   visibility: hidden;
 }
 
-.maze-dropdown:hover ~ #reset {
-  visibility: hidden;
-}
-
 .algorithm-buttons {
   display: none;
   position: absolute;
@@ -125,10 +121,6 @@ body {
 }
 
 .algorithm-dropdown:hover ~ #reset {
-  visibility: hidden;
-}
-
-.algorithm-dropdown:hover ~ #reset-visualization {
   visibility: hidden;
 }
 
@@ -203,7 +195,8 @@ button {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-around;
-  margin-top: 6vh;
+  margin-top: 2vh;
+  bottom: 10vh;
 }
 
 .action-buttons h2 {
@@ -218,7 +211,8 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin: 3vh 0;
+  margin: 2vh 0;
+  height: 3vh;
 }
 
 .action-buttons div button {
